fix jdk 11 newInstance issue